--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Soccer Match</string>
+    <string name="app_title">APLAS SOCCER BOARD</string>
+    <string name="soccer_match_score">Soccer Match Score</string>
+    <string name="home_team">Home Team</string>
+    <string name="away_team">Away Team</string>
 </resources>
