B3 Task 3 - Design the Play layout as second layout that contains CardView, ImageButton, ImageView, TextView, Fragment Container, and Button.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="soccer_match_score">Soccer Match Score</string>
     <string name="home_team">Home Team</string>
     <string name="away_team">Away Team</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
